[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Images/Farm/house.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/Farm/PlayerHouseObject.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 22.7188 )

[node name="PlayerHouseObject" type="Node2D"]
scale = Vector2( 0.85, 0.85 )
script = ExtResource( 2 )

[node name="HouseSprite" type="Sprite" parent="."]
position = Vector2( -1.32065, -152.956 )
scale = Vector2( 1.00399, 0.982278 )
texture = ExtResource( 1 )

[node name="Doorway" type="Area2D" parent="."]
position = Vector2( -1.05882, 20.5878 )
collision_layer = 32
collision_mask = 32
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doorway"]
position = Vector2( 40, -38 )
shape = SubResource( 1 )

[node name="Area2D2" type="StaticBody2D" parent="."]
position = Vector2( -1.32065, 17.0434 )
scale = Vector2( 1.00201, 0.973707 )
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2"]
position = Vector2( 0, -22.5941 )
polygon = PoolVector2Array( -10.9779, 15.4051, 3.99198, 15.4051, 4.25329, 0.559139, 75.8475, 0.559139, 75.8475, 15.4051, 87.8235, 15.4051, 87.8235, 46.2152, 184.597, 46.0493, 184.479, -4.57546, 169.216, -4.57546, 169.333, -101.356, -171.159, -101.356, -169.985, 13.4269, -59.8796, 16.4321, -52.8937, 37.9991, -35.9278, 45.1882, -16.9659, 37.9991 )

[node name="BehindHouseArea" type="Area2D" parent="."]
position = Vector2( -1.32066, 17.0434 )
collision_layer = 4096
collision_mask = 0
input_pickable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BehindHouseArea"]
position = Vector2( 0, -7 )
polygon = PoolVector2Array( -184.444, -110.161, -184.444, -164.279, -101, -202, -104, -217, 40, -357, 182, -221, 183.791, -105.456 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Doorway" to="." method="_on_Doorway_area_entered"]
[connection signal="area_entered" from="BehindHouseArea" to="." method="_on_BehindHouseArea_area_entered"]
[connection signal="area_exited" from="BehindHouseArea" to="." method="_on_BehindHouseArea_area_exited"]
[connection signal="body_entered" from="BehindHouseArea" to="." method="_on_BehindHouseArea_body_entered"]
[connection signal="body_exited" from="BehindHouseArea" to="." method="_on_BehindHouseArea_body_exited"]
